<resources>
    <string name="app_name">DailyHub</string>
    <string name="formatCompleteInfo">完成%d天</string>
    <string name="formatHideInfo">%d个习惯已折叠</string>
    <string name="formatTotalDays">%d天</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="main_fragment_title">今日习惯</string>
    <string name="all_habits_fragment_title">全部习惯</string>
    <string name="setting_fragment_title">个人中心</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="punched">已打卡</string>
    <string name="currentContinuousPunch">当前连续打卡</string>
    <string name="largestContinuousPunch">最高连续打卡</string>
    <string name="createDate">建立日期</string>
    <string name="habitsDetailStatistics">打卡统计</string>
    <string name="signIn">登录</string>
    <string name="success">登录成功</string>
    <string name="loading">登录中..</string>
    <string name="fail">登录失败</string>
    <string name="register">注册</string>
    <string name="successRegi">注册成功</string>
    <string name="loadingRegi">注册中..</string>
    <string name="failRegi">注册失败</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="remember_me">记住密码</string>
    <string name="username">用户名</string>
    <string name="password">密  码</string>
</resources>
