<?xml version="1.0" encoding="utf-8"?>
<com.haibin.calendarview.CalendarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    app:default_status="shrink"
    app:calendar_show_mode="both_month_week_view">


    <RelativeLayout
        android:id="@+id/rl_tool"
        android:layout_width="match_parent"
        android:layout_height="52dp">

        <TextView
            android:id="@+id/tv_month_day"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:textColor="#000000"
            android:textSize="26sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/tv_month_day"
            android:orientation="vertical"
            android:paddingBottom="12dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingTop="12dp"
            tools:ignore="RelativeOverlap">

            <TextView
                android:id="@+id/tv_year"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tv_lunar"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/fl_current"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:background="@drawable/bg_ripple">

            <ImageView
                android:id="@+id/ib_calendar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:tint="#000000"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_calendar" />

            <TextView
                android:id="@+id/tv_current_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="13"
                android:textColor="#000000"
                android:textSize="12sp" />
        </FrameLayout>
    </RelativeLayout>


    <com.haibin.calendarview.CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        app:select_mode="single_mode"
        app:calendar_height="50dp"
        app:current_month_text_color="#333333"
        app:current_month_lunar_text_color="#CFCFCF"
        app:min_year="2004"
        app:other_month_text_color="#e1e1e1"
        app:scheme_text="假"
        app:scheme_text_color="#333"
        app:scheme_theme_color="@color/header"
        app:selected_text_color="#fff"
        app:selected_theme_color="#FF8C69"
        app:week_start_with="mon"
        app:week_background="#fff"
        app:month_view_show_mode="mode_only_current"
        app:week_text_color="#111" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/littleMarginSize"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="7dp"
            android:layout_height="7dp"
            android:layout_marginStart="@dimen/littleMarginSize"
            android:layout_gravity="center"
            android:src="@color/red"/>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/habitsDetailStatistics"
            android:layout_margin="@dimen/littleMarginSize"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/grey"
                android:layout_margin="@dimen/littleMarginSize"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:id="@+id/totalPunchDays"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:text="@string/punched"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/grey"
                android:layout_margin="@dimen/littleMarginSize"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:id="@+id/currentContinuousPunch"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:text="@string/currentContinuousPunch"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/grey"
                android:layout_margin="@dimen/littleMarginSize"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:id="@+id/largestContinuousPunch"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:text="@string/largestContinuousPunch"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/grey"
                android:layout_margin="@dimen/littleMarginSize"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:id="@+id/createDate"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:text="@string/createDate"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</com.haibin.calendarview.CalendarLayout>
